--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </div>
     <h1>Calcular seu IMC</h1>
     <form action="#" class="both" id="formulario">
-      <label for="peso">Peso em KG: </label>
+      <label for="peso">Peso em KG: Exemplo = 75.30 </label>
       <input type="text" id="peso">
 
-      <label for="altura">Altura em Metros: </label>
+      <label for="altura">Altura em Metros: Exemplo = 1.78</label>
       <input type="text" id="altura">
 
       <button>Calcular</button>
